--- a/ASSIGNMENT_3/main.tex
+++ b/ASSIGNMENT_3/main.tex
@@ -41,9 +41,23 @@
     \usepackage{ifthen}                                         %%
   \providecommand{\nCr}[2]{\,^{#1}C_{#2}}
   \providecommand{\nPr}[2]{\,^{#1}P_{#2}}
+  \lstset{
+%language=C,
+frame=single, 
+breaklines=true,
+columns=fullflexible
+}
+
  \begin{document}
  \maketitle
-%\href{}{}
+ \textbf{Download Python code from here}\\
+\begin{lstlisting}
+ https://github.com/annu100/AI5002-Probability-and-Random-variables/blob/main/ASSIGNMENT_3/Assignment_3_Bayes.py
+ \end{lstlisting}
+\textbf{Download latex code from here-}\\
+\begin{lstlisting}
+ https://github.com/annu100/AI5002-Probability-and-Random-variables/blob/main/ASSIGNMENT_3/main.tex
+ \end{lstlisting}
  \section{Problem Statement-Problem 2.10}
 Bag I contains 3 red and 4 black balls and
 Bag II contains 4 red and 5 black balls. One
@@ -85,5 +99,8 @@ Pr(\frac{C1}{A})&=\frac{Pr(C1 \cap A)}{Pr(A)}\\
 Hence the desired probability is $$\frac{16}{31}=0.516$$
             
 \end{document}
+        
+
+
         
 
