--- a/ASSIGNMENT_4/main.tex
+++ b/ASSIGNMENT_4/main.tex
@@ -86,7 +86,7 @@ This implies $n \ge 4$
 
 Therefore, the required number of trials must be greater than or equal to 4.From graph,we can also see\\
 
-\includegraphics[scale=0.7]{Figure_1.png}
+\includegraphics[width=\coloumnwidth]{Figure_1.png}
 \textbf{Above is is the graph of no. of trails versus probability }
             
 \end{document}
