--- a/ASSIGNMENT_4/main.tex
+++ b/ASSIGNMENT_4/main.tex
@@ -92,9 +92,13 @@ This implies $n \ge 4$
 Therefore, the required number of trials must be greater than or equal to 4.From graph,we can also see\\
 
 \includegraphics[width=\columnwidth] {Figure_1.png}
-\textbf{Above is is the graph of no. of trails versus probability }\\ \includegraphics[width=\columnwidth] {fig.png}
-\textbf{Above is is the graph of binomial random number generated versus probability(cdf)}\\ 
+\textbf{Above is is the graph of no. of trails versus probability }\\ 
+\includegraphics[width=\columnwidth] {fig.png}
+\textbf{Above is is the graph of binomial random number generated versus probability(cdf)}\\
 
+
+\includegraphics[width=\columnwidth] {fig3.png}
+\textbf{Above is is the graph of binomial random number generated versus probability(cdf)}\\
 
 \textbf{The above result for $n\ge$ 4 is verified many times.}\\
 \begin{enumerate}
