--- a/Assignment_5/main.tex
+++ b/Assignment_5/main.tex
@@ -198,7 +198,8 @@ Complete Table 4.1.1.
     \hline
     12 & $\frac{1}{36}$ \\
     \hline
-    
+    \caption{\textbf{Sum of numbers on 2 dice and their probability}}
+    \label{tab:my_label}
     \end{tabular}
 \end{center}
 
