--- a/compulsory_assignment/main.tex
+++ b/compulsory_assignment/main.tex
@@ -1,6 +1,6 @@
 \documentclass[journel,12pt,twocoloums]{IEEEtran}
 
-\title{Assignment 8-Probability and Random Variable}
+\title{Compulsory Assignment-Probability and Random Variable}
 \author{Annu-EE21RESCH01010}
 \date{13 January 2020}
 
@@ -53,11 +53,11 @@ columns=fullflexible
  \maketitle
 \textbf{Download latex code from here-}\\
 \begin{lstlisting}
- https://github.com/annu100/AI5002-Probability-and-Random-variables/tree/main.tex/ASSIGNMENT_8
+ https://github.com/annu100/AI5002-Probability-and-Random-variables/tree/main.tex/Compulsory Assignment
  \end{lstlisting}
  \textbf{Download python code from here-}\\
 \begin{lstlisting}
- https://github.com/annu100/AI5002-Probability-and-Random-variables/tree/main.py/ASSIGNMENT_8
+ https://github.com/annu100/AI5002-Probability-and-Random-variables/tree/main.py/Compulsory Assignment
  \end{lstlisting}
  \section{Problem Statement-Problem 3.7}
 
@@ -85,24 +85,29 @@ $X=X_1-X_2$.
     \therefore P(X=x) = \binom{12}{6+x}\brak{\frac{1}{2}}^{12},x= -6\ \text{to}\ 6 
 \end{align}
  therefore,X can have any values between -6 to 6.\\
-\\textbf{}Convolution of Bernoulli distributions}
+ \\
+ \\
+\textbf{Convolution of Bernoulli distributions}\\
 The convolution of two independent identically distributed Bernoulli random variables is a binomial random variable.
 
-{\displaystyle \sum _{i=1}^{2}\mathrm {Bernoulli} (p)\sim \mathrm {Binomial} (2,p)}{\displaystyle \sum _{i=1}^{2}\mathrm {Bernoulli} (p)\sim \mathrm {Binomial} (2,p)}\\
+{\displaystyle \sum _{i=1}^{2}\mathrm {Bernoulli} (p)\sim \mathrm {Binomial} (2,p)}\\{\displaystyle \sum _{i=1}^{2}\mathrm {Bernoulli} (p)\sim \mathrm {Binomial} (2,p)}\\
 \text{To show this let}
 
-{\displaystyle X_{i}\sim \mathrm {Bernoulli} (p),\quad 0<p<1,\quad 1\leq i\leq 2}X_{i}\sim {\mathrm  {Bernoulli}}(p),\quad 0<p<1,\quad 1\leq i\leq 2
+{\displaystyle X_{i}\sim \mathrm {Bernoulli} (p),\quad 0<p<1,\quad 1\leq i\leq 2}\\X_{i}\sim {\mathrm  {Bernoulli}}(p),\quad 0<p<1,\quad 1\leq i\leq 2
 \text{and define}
 
 {\displaystyle Y=\sum _{i=1}^{2}X_{i}}{\displaystyle Y=\sum _{i=1}^{2}X_{i}}\\
 \text{Also, let Z denote a generic binomial random variable:}\\
 
 {\displaystyle Z\sim \mathrm {Binomial} (2,p)\,\!},{\displaystyle Z\sim \mathrm {Binomial} (2,p)\,\!}\\
-\text{Using probability mass functions}
-\text{As} {\displaystyle X_{1}{\text{ and }}X_{2}}X_{1}{\text{ and }}X_{2} \text{are independent,}
+\text{Using probability mass functions}\\
+\text{As} {\displaystyle X_{1}{\text{ and }}X_{2}}\text{are independent,}
 
 {\displaystyle {\begin{aligned}\mathbb {P} [Y=n]&=\mathbb {P} \left[\sum _{i=1}^{2}X_{i}=n\right]\\&=\sum _{m\in \mathbb {Z} }\mathbb {P} [X_{1}=m]\times \mathbb {P} [X_{2}=n-m]\\&=\sum _{m\in \mathbb {Z} }\left[{\binom {1}{m}}p^{m}\left(1-p\right)^{1-m}\right]\left[{\binom {1}{n-m}}p^{n-m}\left(1-p\right)^{1-n+m}\right]\\&=p^{n}\left(1-p\right)^{2-n}\sum _{m\in \mathbb {Z} }{\binom {1}{m}}{\binom {1}{n-m}}\\&=p^{n}\left(1-p\right)^{2-n}\left[{\binom {1}{0}}{\binom {1}{n}}+{\binom {1}{1}}{\binom {1}{n-1}}\right]\\&={\binom {2}{n}}p^{n}\left(1-p\right)^{2-n}=\mathbb {P} [Z=n]\end{aligned}}}{\displaystyle {\begin{aligned}\mathbb {P} [Y=n]&=\mathbb {P} \left[\sum _{i=1}^{2}X_{i}=n\right]\\&=\sum _{m\in \mathbb {Z} }\mathbb {P} [X_{1}=m]\times \mathbb {P} [X_{2}=n-m]\\&=\sum _{m\in \mathbb {Z} }\left[{\binom {1}{m}}p^{m}\left(1-p\right)^{1-m}\right]\left[{\binom {1}{n-m}}p^{n-m}\left(1-p\right)^{1-n+m}\right]\\&=p^{n}\left(1-p\right)^{2-n}\sum _{m\in \mathbb {Z} }{\binom {1}{m}}{\binom {1}{n-m}}\\&=p^{n}\left(1-p\right)^{2-n}\left[{\binom {1}{0}}{\binom {1}{n}}+{\binom {1}{1}}{\binom {1}{n-1}}\right]\\&={\binom {2}{n}}p^{n}\left(1-p\right)^{2-n}=\mathbb {P} [Z=n]\end{aligned}}}
-
+\\
+\\
+\text{Thus,convolution of 2 binomial distributions is also binomial.}\\
+\\
 \section{Simulations}
 Question-Plot the sum and difference of 2 bernaulli random variables\\
 
