--- a/Assignment_10/main.tex
+++ b/Assignment_10/main.tex
@@ -61,31 +61,48 @@ columns=fullflexible
 Let X and Y denote the sets containing 2 and 20 distinct objects respectively and F denote the set of all possible functions defined from X to Y.let f be randomly chosen from F .The probability of f being one-to-one is .........
 
 \section{SOLUTIONS}
+\begin{flushleft}
 
 
-\\
 Function: X $ \to $ Y \\
-   $|Y|$=20\\
-   $|X|$=2\\
+$|Y|$=20\\
+$|X|$=2\\
 total number of functions: = $20^2$ = 400\\
 total number of one-one functions: 
-\begin{align}
+\begin{align*}
             \nPr{|Y|}{|X|} &=\nPr{20}{2}\\
                            &= 380.\\   
-\end{align}
+\end{align*}
 
-Probability=$\frac{380}{400}$= 0.95.\\
+Probability=$\frac{380}{400}$= 0.95.
+\\
 
-Another way to see this:\\
+
+\textbf{Another way to see this:}
+\\
 
 Every element  of X can take any of the 20 values. \\
-Total=20*20=400.\\
-
+Total=20*20=400.
+\\
+\\
+\\
 For one-one function,Every element of X takes a different value.\\
 so,total one to one functions are =20*19=380.\\
 And thus probability is\\
 Probability=$\frac{380}{400}$=0.95\\
+\end{flushleft}
+\pagebreak
 
+\\
+\\
+\\
+\\
+
+\begin{figure}
+\includegraphics[width=\columnwidth] {Figure_1.png}
+
+\end{figure}
+\\
 
 \end{document}
 
