--- a/compulsory_assignment/main.tex
+++ b/compulsory_assignment/main.tex
@@ -108,36 +108,90 @@ The convolution of two independent identically distributed Bernoulli random vari
 \text{Using probability mass functions}\\
 \\
 
-\text{As} {\displaystyle X_{1}{\text{ and }}X_{2}}\text{are independent,}
+$\text{ As}  X_{1}{\text{ and }}X_{2}\text{ are independent,}$
 
-{\displaystyle {\begin{aligned}\mathbb {P} [Y=n]&=\mathbb {P} \left[\sum _{i=1}^{2}X_{i}=n\right]\\&=\sum _{m\in \mathbb {Z} }\mathbb {P} [X_{1}=m]\times \mathbb {P} [X_{2}=n-m]\\&=\sum _{m\in \mathbb {Z} }\left[{\binom {1}{m}}p^{m}\left(1-p\right)^{1-m}\right]\left[{\binom {1}{n-m}}p^{n-m}\left(1-p\right)^{1-n+m}\right]\\&=p^{n}\left(1-p\right)^{2-n}\sum _{m\in \mathbb {Z} }{\binom {1}{m}}{\binom {1}{n-m}}\\&=p^{n}\left(1-p\right)^{2-n}\left[{\binom {1}{0}}{\binom {1}{n}}+{\binom {1}{1}}{\binom {1}{n-1}}\right]\\&={\binom {2}{n}}p^{n}\left(1-p\right)^{2-n}=\mathbb {P} [Z=n]\end{aligned}}}{\displaystyle {\begin{aligned}\mathbb {P} [Y=n]&=\mathbb {P} \left[\sum _{i=1}^{2}X_{i}=n\right]\\&=\sum _{m\in \mathbb {Z} }\mathbb {P} [X_{1}=m]\times \mathbb {P} [X_{2}=n-m]\\&=\sum _{m\in \mathbb {Z} }\left[{\binom {1}{m}}p^{m}\left(1-p\right)^{1-m}\right]\left[{\binom {1}{n-m}}p^{n-m}\left(1-p\right)^{1-n+m}\right]\\&=p^{n}\left(1-p\right)^{2-n}\sum _{m\in \mathbb {Z} }{\binom {1}{m}}{\binom {1}{n-m}}\\&=p^{n}\left(1-p\right)^{2-n}\left[{\binom {1}{0}}{\binom {1}{n}}+{\binom {1}{1}}{\binom {1}{n-1}}\right]\\&={\binom {2}{n}}p^{n}\left(1-p\right)^{2-n}=\mathbb {P} [Z=n]\end{aligned}}}
+ {\begin{aligned}\mathbb {P} [Y=n]&=\mathbb {P} \left[\sum _{i=1}^{2}X_{i}=n\right]\\&=\sum _{m\in \mathbb {Z} }\mathbb {P} [X_{1}=m]\times \mathbb {P} [X_{2}=n-m]\\&=\sum _{m\in \mathbb {Z} }\left[{\binom {1}{m}}p^{m}\left(1-p\right)^{1-m}\right]\left[{\binom {1}{n-m}}p^{n-m}\left(1-p\right)^{1-n+m}\right]\\&=p^{n}\left(1-p\right)^{2-n}\sum _{m\in \mathbb {Z} }{\binom {1}{m}}{\binom {1}{n-m}}\\&=p^{n}\left(1-p\right)^{2-n}\left[{\binom {1}{0}}{\binom {1}{n}}+{\binom {1}{1}}{\binom {1}{n-1}}\right]\\&={\binom {2}{n}}p^{n}\left(1-p\right)^{2-n}=\mathbb {P} [Z=n]\end{aligned}}}{\displaystyle {\begin{aligned}\mathbb {P} [Y=n]&=\mathbb {P} \left[\sum _{i=1}^{2}X_{i}=n\right]\\&=\sum _{m\in \mathbb {Z} }\mathbb {P} [X_{1}=m]\times \mathbb {P} [X_{2}=n-m]\\&=\sum _{m\in \mathbb {Z} }\left[{\binom {1}{m}}p^{m}\left(1-p\right)^{1-m}\right]\left[{\binom {1}{n-m}}p^{n-m}\left(1-p\right)^{1-n+m}\right]\\&=p^{n}\left(1-p\right)^{2-n}\sum _{m\in \mathbb {Z} }{\binom {1}{m}}{\binom {1}{n-m}}\\&=p^{n}\left(1-p\right)^{2-n}\left[{\binom {1}{0}}{\binom {1}{n}}+{\binom {1}{1}}{\binom {1}{n-1}}\right]\\&={\binom {2}{n}}p^{n}\left(1-p\right)^{2-n}=\mathbb {P} [Z=n]\end{aligned}}
 \\
 \\
 \text{Thus,convolution of 2 binomial distributions is also binomial.}\\
 \\
 \section{Simulations-3.7 question}
-\begin{figure}[!htb]
-\includegraphics[width=\columnwidth] {Figure_1.png}
-\includegraphics[width=\columnwidth] {Figure_2.png}
-\includegraphics[width=\columnwidth] {Figure_3.png}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{Figure_1.png}
+    \caption{Probability mass function}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{Figure_2.png}
+    \caption{Cummulative mass function}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{Figure_3.png}
+    \caption{Number of heads -numbrer of tails plot}
+    \label{fig:my_label}
 \end{figure}
 
 \section{Simulations-Extra given by sir}
 Question-Plot the sum and difference of 2 bernaulli random variables\\
 
-
-\begin{figure}[!htb]
-\includegraphics[width=\columnwidth] {pdf_A_B.png}
-\includegraphics[width=\columnwidth] {pdf_sum.png}
-\includegraphics[width=\columnwidth] {pdf_subtract.png}
-
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{pdf_A_B.png}
+    \caption{Cummulative mass function}
+    \label{fig:my_label}
 \end{figure}
-\begin{figure}[!htb]
-\includegraphics[width=\columnwidth] {cdf_A_and_B.png}
-\includegraphics[width=\columnwidth] {cdf_sum.png}
-\includegraphics[width=\columnwidth] {cdf_subtract.png}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{pdf_A_B.png}
+    \caption{pdf A and B}
+    \label{fig:my_label}
 \end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{pdf_A_B.png}
+    \caption{pdf of A and B mass function}
+    \label{fig:my_label}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{pdf_sum.png}
+    \caption{Sum of 2 probability mass function}
+    \label{fig:my_label}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{pdf_subtract.png}
+    \caption{Subtract of 2 probability mass function}
+    \label{fig:my_label}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{cdf_A_and_B.png}
+    \caption{Cummulative mass function of A and B}
+    \label{fig:my_label}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{cdf_sum.png}
+    \caption{Sum of 2 cummulative density function}
+    \label{fig:my_label}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{cdf_subtract.png}
+    \caption{Subtract of 2 cummulative density function}
+    \label{fig:my_label}
+\end{figure}
+
 \subsection{Simulations-solutions}
 \\
 \\
@@ -166,3 +220,4 @@ If x is a random variable with distribution Bin(n, p), then for sufficiently lar
 \end{document}
 
         
+
