--- a/Assignment12/main.tex
+++ b/Assignment12/main.tex
@@ -84,12 +84,12 @@ $S_j$ here represents a state on our statespace.
 $Pr(X_{n+1}=S_j|X_n,X_{n-1},\ldots X_0)=Pr(X_{n+1}=S_j|X_n).$\\
 Further,the probabilistics are often fixed in time.\\
 Now,Time Homogeneous property/stationary property of MC is-\\
-\begin{align*}
+\begin{align}
   Pr(X_{n+1}=S_j|X_n) &= Pr(X_1=S_j | X_0)\\
                       &= Pr(X_2=S_j | X_1)\\
                       &= Pr(X_3=S_j | X_2)\\
                       &= Pr(X_4=S_j | X_3) 
-\end{align*}
+\end{align}
 So.time homogeneous or stationary property means our one step transition probability are independent of time (n).\\
 
 Now consider the case when n tends to $\infty$.\\
@@ -109,7 +109,7 @@ Pr(X_n=S_j) \text{as n tends to $\infty$ ,we need to find -}\\
 \text{let}  \pi_j \text{be stationary distribution of MC i.e }\\
 \pi_j =Pr(X_n=S_j|X_0=S_1)
 \end{math}
-\begin{align*}
+\begin{align}
 \lim_{n \to \infty}Pr(X_n=S_j) 
  &= \lim_{n \to \infty} \sum_{i} Pr(X_n=S_j |X_0=S_i) \times Pr(X_0=S_i)\\
  &=\sum_{i} \lim_{n \to \infty} Pr(X_n=S_j |X_0=S_i) \times Pr(X_0=S_i)\\
@@ -117,7 +117,7 @@ Pr(X_n=S_j) \text{as n tends to $\infty$ ,we need to find -}\\
  &=\sum \pi_j \times Pr(X_0=S_i)\\
  &=\pi_j \times \sum_{i} Pr(X_0=S_i)\\
  &=\pi_j
-\end{align*}
+\end{align}
 
 $\lim_{n \to \infty}Pr(X_n=S_j) =\pi_j$ irrespective of initial distribution i.e $Pr(X_0=S_j)$. \\
 This is limiting behaviour of DTMC\\
@@ -137,16 +137,16 @@ starting with initial distribution for inital state $X_0$\\
 \\
 $\pi_i=Pr(X_0=S_i)$\\
 \text{Now for stationary distribution- } 
-$\mathbf{\pi}^\intercal \mathbf{P}=\mathbf{\pi}$
+$\myvec{\pi}^\intercal \myvec{P}=\myvec{\pi}$
 
 where $\pi$ is the stationary distribution.\\
 It is left eigen vector of probability ransition matrix $\mathbf{P}$ or eigen vector of $\mathbf{P}^ \intercal$\\
-let $\mathbf{A}=\mathbf{P}^\intercal$
+let $\myvec{A}=\myvec{P}^\intercal$
 so,$|A-\lambda I|=0$ for eigen value calculation.\\
 and Eigen vector lies in null space of matrix $A-\lambda I$\\
 As it is 5*5 matrix,using python code for calculation of eigen values and eigen vector ,we get
 Eigen values are-\\
-$\lambda$1=1 , $\lambda$2=1, $\lambda$=0.804, $\lambda$4=-0.138, $\lambda$5=0.333\\
+$\lambda_1$=1 , $\lambda_2$=1, $\lambda_3$=0.804, $\lambda_4$=-0.138, $\lambda_5$=0.333\\
 Possible eigenvectors are: \\
 eigenvector 1:\\
 \begin{math}
