--- a/Assignment 14/main.tex
+++ b/Assignment 14/main.tex
@@ -59,7 +59,7 @@ columns=fullflexible
  \end{lstlisting}
 
  \section{Gate-24 Solution}
-
+\begin{flushleft}
 A fair coin is tossed till a head appears for the
 first time. The probability that the number of
 requried tosses is odd,is ..........
@@ -72,7 +72,9 @@ We can get number of tosses like this\\
 
 1, 3 ,5,7.........\\
 Then the probability for getting head for the first time is-\\
-$Pr(\text{Head 1st time})=(1/2)^1+ (1/2)^3 +(1/2)^5 +(1/2)^7 ..........$
+\begin{align}
+Pr(\text{Head 1st time})=(1/2)^1+ (1/2)^3 +(1/2)^5 +(1/2)^7 \ldots 
+\end{align}
 
 As we can see this is decreasing $G.P$ series
 
@@ -83,6 +85,7 @@ where.
 a is first term of the series=$\frac{1}{2}$
 
 r is common. Ratio=$\frac{1}{4}$
+\end{flushleft}
 \begin{align}
     Pr(\text{Head 1st time})&=\frac{1/2}{(1-1/4)}
                      &=\frac{2}{3}
